add vercel kv wrapper + env variables + showcase notebook

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,9 @@ VERIFY_TOKEN=""  # Must match the token used in webhook setup (e.g., 12345)
 # OpenAI API Configuration
 OPENAI_API_KEY=""  # Retrieved from OpenAI
 OPENAI_ASSISTANT_ID=""  # Retrieved from OpenAI when creating an assistant or through code (recommended: notebooks)
+
+# Vercel KV
+KV_URL=""
+KV_REST_API_URL=""
+KV_REST_API_TOKEN=""
+KV_REST_API_READ_ONLY_TOKEN=""
