--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ ACCESS_TOKEN=""  # Token expires after 24 hours, update it regularly or set up a
 APP_ID=""  # Retrieved from Meta Dashboard
 APP_SECRET=""  # Retrieved from Meta Dashboard (App-Settings > Basic)
 RECIPIENT_WAID=""  # Your WhatsApp number with country code (e.g., +31612345678)
-VERSION="v18.0"  # API Version
+VERSION=""  # API Version
 PHONE_NUMBER_ID=""  # Retrieved from Meta Dashboard
 
 VERIFY_TOKEN=""  # Must match the token used in webhook setup (e.g., 12345)
