--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,8 @@ KV_URL=""
 KV_REST_API_URL=""
 KV_REST_API_TOKEN=""
 KV_REST_API_READ_ONLY_TOKEN=""
+
+# Langfuse
+LANGFUSE_SECRET_KEY=
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_HOST=
